--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World
+<h1> Hi </h1>
+<div id="particles-js"></div>
+
+<script src="js/particles.js"></script>
+<script src="js/app.js"></script>
