messing with stuff more

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<h1> Hi </h1>
-<div id="particles-js"></div>
+---
+layout: default
+---
+
+<div id="particles-js">
+
+  <h1> Hi </h1>
+
+</div>
 
 <script src="js/particles.js"></script>
 <script src="js/app.js"></script>
