added in story telling on main page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="panel">
-  <h1>Data + Design</h1>
+  <h1 id="my-welcome"></h1>
 </div>
 <div id="particles-js">
 </div>
