added basic drawing functions and fixed button for main page.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 layout: default
 ---
 
-<div class="panel">
+<div id="my-pannel" class="panel">
   <h1 id="my-welcome"></h1>
+  <button id="explore-button" class="button button--nanuk button--round-l button--inverted .button--text-upper hidden">
+    <span>e</span><span>x</span><span>p</span><span>l</span><span>o</span><span>r</span><span>e</span>
+  </button>
 </div>
 <div id="particles-js">
 </div>
