--- a/about.html
+++ b/about.html
@@ -3,3 +3,5 @@ layout: page
 title: About
 permalink: /about/
 ---
+<h3 style="text-align:center;">About Me Coming Soon</h3>
+<div id="music"></div>
