--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,7 @@ permalink: /projects/
 
         <h2>
           <a class="project-link" href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a>
+          test
         </h2>
       </li>
     {% endfor %}
