added blur hover on mah name

--- a/about.html
+++ b/about.html
@@ -3,5 +3,5 @@ layout: page
 title: About
 permalink: /about/
 ---
-<h3 style="text-align:center;">About Me Coming Soon</h3>
+<h3 style="text-align:center;">About Me Coming Soon... Untill then, enjoy some music.</h3>
 <div id="music"></div>
