--- a/about.html
+++ b/about.html
@@ -3,5 +3,6 @@ layout: page
 title: About
 permalink: /about/
 ---
+<!-- <canvas id='graph'></canvas> -->
 <h3 style="text-align:center;">About Me Coming Soon... Untill then, enjoy some music.</h3>
 <div id="music"></div>
