adding graph guts

--- a/about.html
+++ b/about.html
@@ -4,5 +4,19 @@ title: About
 permalink: /about/
 ---
 <!-- <canvas id='graph'></canvas> -->
-<h3 style="text-align:center;">About Me Coming Soon... Untill then, enjoy some music.</h3>
-<div id="music"></div>
+<!-- <h3 style="text-align:center;">About Me Coming Soon... Untill then, enjoy some music.</h3> -->
+<div class="about">
+  <div class="col-3">
+    <h2>Code</h2>
+    <canvas id="lang-graph" width="400" height="400"></canvas>
+  </div
+  ><div class="col-3">
+    <h2>Design</h2>
+    <canvas id="design-graph" width="400" height="400"></canvas>
+  </div
+  ><div class="col-3">
+    <h2>Data</h2>
+    <canvas id="data-graph" width="400" height="400"></canvas>
+  </div>
+</div>
+<!-- <div id="music"></div> -->
