finished up the music part of my site

--- a/about.html
+++ b/about.html
@@ -3,9 +3,8 @@ layout: page
 title: About
 permalink: /about/
 ---
-<!-- <canvas id='graph'></canvas> -->
-<!-- <h3 style="text-align:center;">About Me Coming Soon... Untill then, enjoy some music.</h3> -->
 <div class="about">
+  <h2>An Overview Of My Current Skills.</h2>
   <div class="col-3">
     <h2>Code</h2>
     <canvas id="lang-graph" width="400" height="400"></canvas>
@@ -19,4 +18,3 @@ permalink: /about/
     <canvas id="data-graph" width="400" height="400"></canvas>
   </div>
 </div>
-<!-- <div id="music"></div> -->
