improved music copy

--- a/music.html
+++ b/music.html
@@ -5,6 +5,6 @@ permalink: /music/
 ---
 <h2 style="text-align:center;margin:20px auto;">Songs I've written.</h2>
 <div id="player"></div>
-<h2 style="text-align:center;margin:30px auto;">Some Music I've been listening to recently.</h2>
+<h2 style="text-align:center;margin:30px auto;">What I've been listening to.</h2>
 
 <div id="music" class="grid"></div>
