improved graph stying

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 permalink: /about/
 ---
 <div class="about">
-  <h2>An Overview Of My Current Skills.</h2>
+  <h2>My Current Skills.</h2>
   <div class="col-3">
     <h2>Code</h2>
     <canvas id="lang-graph" width="400" height="400"></canvas>
@@ -16,5 +16,18 @@ permalink: /about/
   ><div class="col-3">
     <h2>Data</h2>
     <canvas id="data-graph" width="400" height="400"></canvas>
+  </div>
+  <h2>My Experience.</h2>
+  <div>
+    <h2>Service Spring</h2>
+    <p>Size: 150+ employees</p>
+    <p>Industry: Manufacturing/Distribution</p>
+    <p></p>
+  </div>
+  <div>
+    <h2>Kinvovled</h2>
+    <p>Size: 8 employees</p>
+    <p>Industry: Education</p>
+    <p></p>
   </div>
 </div>
