--- a/about.html
+++ b/about.html
@@ -18,16 +18,27 @@ permalink: /about/
     <canvas id="data-graph" width="400" height="400"></canvas>
   </div>
   <h2>My Experience.</h2>
-  <div>
-    <h2>Service Spring</h2>
-    <p>Size: 150+ employees</p>
-    <p>Industry: Manufacturing/Distribution</p>
-    <p></p>
-  </div>
-  <div>
-    <h2>Kinvovled</h2>
-    <p>Size: 8 employees</p>
-    <p>Industry: Education</p>
-    <p></p>
+  <div class="experience">
+    <div class="col-3">
+      <h2><a href="http://preview.sscorp.com/" target="_blank">Service Spring</a></h2>
+      <p><a href="http://preview.sscorp.com/" target="_blank"><img src="/assets/pics/ssc_logo.jpg" height="65%" width="65%"></a></p>
+      <p><strong>Size:</strong><br> 150+ employees</p>
+      <p><strong>Industry:</strong><br> Manufacturing/Distribution</p>
+      <p><strong>Roles Held:</strong><br> Lean Administrator, Engineering Tech, Engineering Manager, Operations Manager, Project Manager, Director Of Technology</p>
+    </div
+    ><div class="col-3">
+      <h2><a href="https://kinvolved.com/" target="_blank">Kinvovled</a></h2>
+      <p><a href="https://kinvolved.com/" target="_blank"><img src="/assets/pics/kinvolved_logo.png" height="65%" width="65%"></a></p>
+      <p><strong>Size:</strong><br> 8 employees</p>
+      <p><strong>Industry:</strong><br> Education Technology</p>
+      <p><strong>Roles Held:</strong><br> Software Engineer, Senior Software Engineer</p>
+    </div
+    ><div class="col-3">
+      <h2><a href="https://generalassemb.ly/" target="_blank">General Assembly</a></h2>
+      <p><a href="https://generalassemb.ly/" target="_blank"><img src="/assets/pics/ga_logo.jpg" height="65%" width="65%"></a></p>
+      <p><strong>Size:</strong><br> 250+ employees</p>
+      <p><strong>Industry:</strong><br> Education</p>
+      <p><strong>Roles Held:</strong><br> Expert In Residence</p>
+    </div>
   </div>
 </div>
