--- a/about.html
+++ b/about.html
@@ -41,4 +41,6 @@ permalink: /about/
       <p><strong>Roles Held:</strong><br> Expert In Residence</p>
     </div>
   </div>
+   <h2>Places I've Lived.</h2>
+  <div id="map"></div>
 </div>
