--- a/_projects/2013-11-08-spoke-about-wordpress.html
+++ b/_projects/2013-11-08-spoke-about-wordpress.html
@@ -3,7 +3,7 @@ layout: project
 title: Spoke About WordPress
 date: 2013-11-08 05:01:10.000000000 -05:00
 categories: []
-tags: []
+tags: test
 status: publish
 type: project
 published: true
