--- a/projects.html
+++ b/projects.html
@@ -4,24 +4,18 @@ title: Projects
 permalink: /projects/
 ---
 
-<div id="projects" class="js-isotope"
-  data-isotope-options='{ "itemSelector": ".test", "masonry": { "columnWidth": 200 } }'>
+<div id="projects">
   <ul class="project-list">
     {% for project in site.projects reversed %}
       <li class="project {{project.tags}}" data-sr="move 16px scale up 20%, over 2s">
-        <img src="http://placekitten.com/g/250/250">
-
-
-        <h2>
-          <a class="project-link" href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a>
-        </h2>
-        <!-- <span class="project-meta">{{ project.date | date: "%b %-d, %Y" }}</span> -->
-
-
+        <a href="{{ project.url | prepend: site.baseurl }}">
+          <img src="http://placekitten.com/g/250/250">
+          <a class="project-link" href="{{ project.url | prepend: site.baseurl }}">
+            <h2>{{ project.title }}</h2>
+          </a>
+          <!-- <span class="project-meta">{{ project.date | date: "%b %-d, %Y" }}</span> -->
+        </a>
       </li>
     {% endfor %}
   </ul>
-
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-
 </div>
