switch jobs order

--- a/about.html
+++ b/about.html
@@ -24,21 +24,21 @@ permalink: /about/
       <p><a href="http://preview.sscorp.com/" target="_blank"><img src="/assets/pics/ssc_logo.jpg" height="65%" width="65%"></a></p>
       <p><strong>Size:</strong><br> 150+ employees</p>
       <p><strong>Industry:</strong><br> Manufacturing/Distribution</p>
-      <p><strong>Roles Held:</strong><br> Lean Administrator, Engineering Tech, Engineering Manager, Operations Manager, Project Manager, Director Of Technology</p>
+      <p><strong>Roles Held:</strong><br> Director Of Technology, Project Manager, Operations Manager, Engineering Manager, Lean Administrator, Engineering Tech </p>
     </div
     ><div class="col-3">
       <h2><a href="https://kinvolved.com/" target="_blank">Kinvovled</a></h2>
       <p><a href="https://kinvolved.com/" target="_blank"><img src="/assets/pics/kinvolved_logo.png" height="65%" width="65%"></a></p>
       <p><strong>Size:</strong><br> 8 employees</p>
       <p><strong>Industry:</strong><br> Education Technology</p>
-      <p><strong>Roles Held:</strong><br> Software Engineer, Senior Software Engineer</p>
+      <p><strong>Roles Held:</strong><br> Senior Software Engineer, Software Engineer </p>
     </div
     ><div class="col-3">
       <h2><a href="https://generalassemb.ly/" target="_blank">General Assembly</a></h2>
       <p><a href="https://generalassemb.ly/" target="_blank"><img src="/assets/pics/ga_logo.jpg" height="65%" width="65%"></a></p>
       <p><strong>Size:</strong><br> 250+ employees</p>
       <p><strong>Industry:</strong><br> Education</p>
-      <p><strong>Roles Held:</strong><br> Expert In Residence</p>
+      <p><strong>Roles Held:</strong><br> Expert In Residence </p>
     </div>
   </div>
    <h2>Places I've Lived.</h2>
