adding in project pics to assets

--- a/_projects/2013-10-29-helped-create-missionwork.html
+++ b/_projects/2013-10-29-helped-create-missionwork.html
@@ -4,21 +4,10 @@ title: Helped Create Mission@Work
 date: 2013-10-29 20:38:12.000000000 -04:00
 categories: []
 tags: []
-status: publish
-type: project
-published: true
-meta:
-  _edit_last: '1'
-  _thumbnail_id: '1952'
-  pe_theme_Reversal: O:8:"stdClass":2:{s:7:"gallery";O:8:"stdClass":3:{s:2:"id";s:4:"1944";s:5:"width";s:0:"";s:6:"height";s:3:"333";}s:5:"video";O:8:"stdClass":1:{s:2:"id";s:4:"1862";}}
-author:
-  login: kevin
-  email: kevin.mcalear@gmail.com
-  display_name: kevin
-  first_name: ''
-  last_name: ''
-excerpt: !ruby/object:Hpricot::Doc
 ---
-<p>Mission At Work is a uniquely Service Spring answer to the problem of connecting people who want to volunteer and the organizations that desperately need these volunteers. We wanted to come up with a way to give back some of the blessings and use as many of our collective resources as possible. Mission@Work has given lots of time, money, resources, and love to several non-profits in the area and has help bond Service Spring Employees together through service.<br />
-<br />
-[feature title="Mission@Work's Website" icon="icon-heart"]<a href="http://www.missionatwork.tv/" target="_blank">missionatwork.tv</a>[/feature]</p>
+<p>
+  Mission At Work is a uniquely Service Spring answer to the problem of connecting people who want to volunteer and the organizations that desperately need these volunteers. We wanted to come up with a way to give back some of the blessings and use as many of our collective resources as possible. Mission@Work has given lots of time, money, resources, and love to several non-profits in the area and has help bond Service Spring Employees together through service.
+  <br />
+  <br />
+  <a href="http://www.missionatwork.tv/" target="_blank">missionatwork.tv</a>
+</p>
