--- a/_projects/2013-11-08-built-a-corporate-internal-social-network.html
+++ b/_projects/2013-11-08-built-a-corporate-internal-social-network.html
@@ -4,21 +4,10 @@ title: Built A Corporate Internal Social Network
 date: 2013-11-08 00:33:55.000000000 -05:00
 categories: []
 tags: []
-status: publish
-type: project
-published: true
-meta:
-  _edit_last: '1'
-  pe_theme_Reversal: O:8:"stdClass":2:{s:7:"gallery";O:8:"stdClass":3:{s:2:"id";s:3:"280";s:5:"width";s:0:"";s:6:"height";s:3:"333";}s:5:"video";O:8:"stdClass":1:{s:2:"id";s:3:"188";}}
-  _thumbnail_id: '279'
-author:
-  login: kevin
-  email: kevin.mcalear@gmail.com
-  display_name: kevin
-  first_name: ''
-  last_name: ''
-excerpt: !ruby/object:Hpricot::Doc
 ---
-<p>I have gotten the opportunity to design & implement an internal social network for Service Spring Corp. to connect all of their departments, locations, and individuals that work within them together in some pretty cool ways. Some employees said that they learned more about the company in 3 months of being on the social network than the last 5 years of working at Service Spring. The California location said that they finally felt like part of the "family" once they got on the system. Since the creation of the social network in 2010, we have been able to track and understand key social information about the company and be intentional about improving our moral and ability to listen to the employees in a new way. We used Socialcast as the backbone of this social network.<br />
-<br />
-[feature title="Socialcast's Website" icon="icon-heart"]<a href="http://www.socialcast.com/" target="_blank">socialcast.com</a>[/feature]</p>
+<p>
+  I have gotten the opportunity to design & implement an internal social network for Service Spring Corp. to connect all of their departments, locations, and individuals that work within them together in some pretty cool ways. Some employees said that they learned more about the company in 3 months of being on the social network than the last 5 years of working at Service Spring. The California location said that they finally felt like part of the "family" once they got on the system. Since the creation of the social network in 2010, we have been able to track and understand key social information about the company and be intentional about improving our moral and ability to listen to the employees in a new way. We used Socialcast as the backbone of this social network.
+  <br />
+  <br />
+  <a href="http://www.socialcast.com/" target="_blank">socialcast.com</a>
+</p>
