--- a/_projects/2013-11-08-built-a-photographers-website.html
+++ b/_projects/2013-11-08-built-a-photographers-website.html
@@ -4,20 +4,10 @@ title: Built A Photographer's Website
 date: 2013-11-08 00:35:25.000000000 -05:00
 categories: []
 tags: []
-status: publish
-type: project
-published: true
-meta:
-  _edit_last: '1'
-  _thumbnail_id: '1814'
-  pe_theme_Reversal: O:8:"stdClass":2:{s:7:"gallery";O:8:"stdClass":3:{s:2:"id";s:4:"1807";s:5:"width";s:0:"";s:6:"height";s:3:"333";}s:5:"video";O:8:"stdClass":1:{s:2:"id";s:4:"1806";}}
-author:
-  login: kevin
-  email: kevin.mcalear@gmail.com
-  display_name: kevin
-  first_name: ''
-  last_name: ''
-excerpt: !ruby/object:Hpricot::Doc
 ---
-<p>I designed & built Brant's photography website to give him a place to share who he is, what he can do, and since I built it using WordPress, the ability to update and maintain it himself.</p>
-<p>[feature title="Brandt's Website" icon="icon-heart"]<a href="http://brandtchapman.com/" target="_blank">brandtchapman.com</a>[/feature]</p>
+<p>
+  I designed & built Brant's photography website to give him a place to share who he is, what he can do, and since I built it using WordPress, the ability to update and maintain it himself.
+</p>
+<p>
+  <a href="http://brandtchapman.com/" target="_blank">brandtchapman.com</a>
+</p>
