--- a/_projects/2013-11-08-built-iron-embers-webstore.html
+++ b/_projects/2013-11-08-built-iron-embers-webstore.html
@@ -4,21 +4,10 @@ title: Built Iron & Ember's Webstore
 date: 2013-11-08 01:43:42.000000000 -05:00
 categories: []
 tags: []
-status: publish
-type: project
-published: true
-meta:
-  _edit_last: '1'
-  _thumbnail_id: '1796'
-  pe_theme_Reversal: O:8:"stdClass":2:{s:7:"gallery";O:8:"stdClass":3:{s:2:"id";s:4:"1794";s:5:"width";s:0:"";s:6:"height";s:3:"333";}s:5:"video";O:8:"stdClass":1:{s:2:"id";s:4:"1783";}}
-author:
-  login: kevin
-  email: kevin.mcalear@gmail.com
-  display_name: kevin
-  first_name: ''
-  last_name: ''
-excerpt: !ruby/object:Hpricot::Doc
 ---
-<p>I built out and designed the initial look, feel, and functionality of I&A's e-commerce site and CMS. This is a startup that wants to sell "provisions for gentlemen" which I think is a great idea so I did the project for free.<br />
-<br />
-[feature title="Iron & Ember's Website" icon="icon-heart"]<a href="http://www.ironandember.com/" target="_blank">ironandember.com</a>[/feature]</p>
+<p>
+  I built out and designed the initial look, feel, and functionality of I&A's e-commerce site and CMS. This is a startup that wants to sell "provisions for gentlemen" which I think is a great idea so I did the project for free.
+  <br />
+  <br />
+  <a href="http://www.ironandember.com/" target="_blank">ironandember.com</a>
+</p>
