--- a/_projects/2013-11-08-started-sscs-internship-program-for-designers-developers.html
+++ b/_projects/2013-11-08-started-sscs-internship-program-for-designers-developers.html
@@ -4,19 +4,7 @@ title: Started SSC's Internship Program For Designers & Developers
 date: 2013-11-08 01:44:29.000000000 -05:00
 categories: []
 tags: []
-status: publish
-type: project
-published: true
-meta:
-  _edit_last: '1'
-  pe_theme_Reversal: O:8:"stdClass":2:{s:7:"gallery";O:8:"stdClass":3:{s:2:"id";s:2:"88";s:5:"width";s:0:"";s:6:"height";s:3:"333";}s:5:"video";O:8:"stdClass":1:{s:2:"id";s:3:"188";}}
-  _thumbnail_id: '190'
-author:
-  login: kevin
-  email: kevin.mcalear@gmail.com
-  display_name: kevin
-  first_name: ''
-  last_name: ''
-excerpt: !ruby/object:Hpricot::Doc
 ---
-<p>Worked with Service Spring's Executive team, various colleges, and current employees that would work with the new interns to build the internship program!</p>
+<p>
+  Worked with Service Spring's Executive team, various colleges, and current employees that would work with the new interns to build the internship program!
+</p>
