--- a/_projects/2013-11-08-started-visual-construction.html
+++ b/_projects/2013-11-08-started-visual-construction.html
@@ -4,22 +4,13 @@ title: Started Visual Construction
 date: 2013-11-08 08:44:23.000000000 -05:00
 categories: []
 tags: []
-status: publish
-type: project
-published: true
-meta:
-  _edit_last: '1'
-  pe_theme_Reversal: O:8:"stdClass":2:{s:7:"gallery";O:8:"stdClass":3:{s:2:"id";s:3:"211";s:5:"width";s:0:"";s:6:"height";s:3:"333";}s:5:"video";O:8:"stdClass":1:{s:2:"id";s:3:"188";}}
-  _thumbnail_id: '224'
-author:
-  login: kevin
-  email: kevin.mcalear@gmail.com
-  display_name: kevin
-  first_name: ''
-  last_name: ''
-excerpt: !ruby/object:Hpricot::Doc
 ---
-<p>I created a unique, scalable business model, branding, logo, website, production system, and everything else in between to create specific digital products and services. I pitched it To Service Spring Corporation and they have brought it into their business model. The entire idea, strategy, and system is something that Service Spring Corp. believes in and has continually built out.<br />
-<br />
-[feature title="Check Out The Website" icon="icon-heart"]<a href="http://www.visualconstructionmedia.com" target="_blank">visualconstructionmedia.com</a>[/feature]</p>
-<p>[feature title="Get A Quote From Them" icon="icon-usd"]<a href="http://visualconstructionmedia.com/quote/" target="_blank">Click here to get your ideas created!</a>[/feature]</p>
+<p>
+  I created a unique, scalable business model, branding, logo, website, production system, and everything else in between to create specific digital products and services. I pitched it To Service Spring Corporation and they have brought it into their business model. The entire idea, strategy, and system is something that Service Spring Corp. believes in and has continually built out.
+  <br />
+  <br />
+  <a href="http://www.visualconstructionmedia.com" target="_blank">visualconstructionmedia.com</a>
+</p>
+<p>
+  <a href="http://visualconstructionmedia.com/quote/" target="_blank">Click here to get your ideas created!</a>
+</p>
