--- a/_projects/2014-05-01-created-tangent.html
+++ b/_projects/2014-05-01-created-tangent.html
@@ -4,21 +4,14 @@ title: Created Tangent
 date: 2014-05-01 17:48:22.000000000 -04:00
 categories: []
 tags: []
-status: publish
-type: project
-published: true
-meta:
-  _edit_last: '1'
-  _thumbnail_id: '1976'
-  pe_theme_Reversal: O:8:"stdClass":2:{s:7:"gallery";O:8:"stdClass":3:{s:2:"id";s:4:"1944";s:5:"width";s:0:"";s:6:"height";s:3:"333";}s:5:"video";O:8:"stdClass":1:{s:2:"id";s:4:"1862";}}
-author:
-  login: kevin
-  email: kevin.mcalear@gmail.com
-  display_name: kevin
-  first_name: ''
-  last_name: ''
-excerpt: !ruby/object:Hpricot::Doc
 ---
-<p>Tangent is a fun way to explore the web using word associations and different resources on the web. It was fun to build and use! Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, D3, JQuery, CSS, HTML, and 7 different APIs.<br /></p>
-<p>[feature title="Check Out The Website" icon="icon-heart"]<a href="http://tangentapp.herokuapp.com/" target="_blank">tangentapp.herokuapp.com</a>[/feature]</p>
-<p>[feature title="See The Code" icon="icon-github"]<a href="https://github.com/kevinmcalear/quick_shark" target="_blank">Go To The GitHub Project</a>[/feature]</p>
+<p>
+  Tangent is a fun way to explore the web using word associations and different resources on the web. It was fun to build and use! Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, D3, JQuery, CSS, HTML, and 7 different APIs.
+  <br />
+</p>
+<p>
+  <a href="http://tangentapp.herokuapp.com/" target="_blank">tangentapp.herokuapp.com</a>
+</p>
+<p>
+  <a href="https://github.com/kevinmcalear/quick_shark" target="_blank">Go To The GitHub Project</a>
+</p>
