--- a/_projects/2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
+++ b/_projects/2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
@@ -4,22 +4,17 @@ title: Won A NYC TechCrunch Disrupt Hackathon Award
 date: 2014-05-09 17:29:05.000000000 -04:00
 categories: []
 tags: []
-status: publish
-type: project
-published: true
-meta:
-  _edit_last: '1'
-  pe_theme_Reversal: O:8:"stdClass":2:{s:7:"gallery";O:8:"stdClass":3:{s:2:"id";s:4:"1944";s:5:"width";s:0:"";s:6:"height";s:3:"333";}s:5:"video";O:8:"stdClass":1:{s:2:"id";s:4:"1862";}}
-  _thumbnail_id: '1979'
-author:
-  login: kevin
-  email: kevin.mcalear@gmail.com
-  display_name: kevin
-  first_name: ''
-  last_name: ''
-excerpt: !ruby/object:Hpricot::Doc
 ---
-<p>Our Team built a data viz to show the relationships between startups and their investors. We won the CrunchBase award and and free tickets to TechCrunch Disrupt ($3k a ticket!) Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, Esri Maps, JQuery, CSS, HTML, and the CrunchBase API.<br /></p>
-<p>[feature title="Check Out The Website" icon="icon-heart"]<a href="http://hack-argos.herokuapp.com/" target="_blank">hack-argos.herokuapp.com</a>[/feature]</p>
-<p>[feature title="See The Code" icon="icon-github"]<a href="https://github.com/kevinmcalear/Argos" target="_blank">Go To The GitHub Project</a>[/feature]</p>
-<p>[feature title="See The Pitch" icon="icon-bullhorn"]<a href="http://on.aol.com/video/argos-crunchbase-viz---disrupt-ny-2014-hackathon-518219141" target="_blank">Check Out Our 60 Second Presentation</a>[/feature]</p>
+<p>
+  Our Team built a data viz to show the relationships between startups and their investors. We won the CrunchBase award and and free tickets to TechCrunch Disrupt ($3k a ticket!) Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, Esri Maps, JQuery, CSS, HTML, and the CrunchBase API.
+  <br />
+</p>
+<p>
+  <a href="http://hack-argos.herokuapp.com/" target="_blank">hack-argos.herokuapp.com</a>
+</p>
+<p>
+  <a href="https://github.com/kevinmcalear/Argos" target="_blank">Go To The GitHub Project</a>
+</p>
+<p>
+  <a href="http://on.aol.com/video/argos-crunchbase-viz---disrupt-ny-2014-hackathon-518219141" target="_blank">Check Out Our 60 Second Presentation</a>
+</p>
