--- a/_projects/2013-11-07-invented-new-equipment-proecesses.html
+++ b/_projects/2013-11-07-invented-new-equipment-proecesses.html
@@ -4,20 +4,9 @@ title: Invented New Equipment & Proecesses
 date: 2013-11-07 13:33:09.000000000 -05:00
 categories: []
 tags: []
-status: publish
-type: project
-published: true
-meta:
-  _edit_last: '1'
-  pe_theme_Reversal: O:8:"stdClass":2:{s:7:"gallery";O:8:"stdClass":3:{s:2:"id";s:4:"1807";s:5:"width";s:0:"";s:6:"height";s:3:"333";}s:5:"video";O:8:"stdClass":1:{s:2:"id";s:4:"1783";}}
-  _thumbnail_id: '1844'
-author:
-  login: kevin
-  email: kevin.mcalear@gmail.com
-  display_name: kevin
-  first_name: ''
-  last_name: ''
-excerpt: !ruby/object:Hpricot::Doc
 ---
-<p>I was on an amazing team (that I even got to lead for a season) that were the "think tank" for our entire organization. We got to do tons of R&amp;D, build prototypes, ask tough and crazy questions and then answer them, improve our process and equipment, and we even got to invent brand new ways to make and do things! I was a part of a team of four people that revolutionized several ways of doing things and birthing new equipment from our brains to the shop floors to do it.</p>
-<p>[feature title="See All Of Our Secrets" icon="icon-heart"]<a href="http://blogs.msdn.com/cfs-filesystemfile.ashx/__key/communityserver-blogs-components-weblogfiles/00-00-00-53-00-metablogapi/0753.image_5F00_24086BE4.png" target="_blank">allofoursecerets.com</a>[/feature]</p>
+<p>
+  I was on an amazing team (that I even got to lead for a season) that were the "think tank" for our entire organization. We got to do tons of R&amp;D, build prototypes, ask tough and crazy questions and then answer them, improve our process and equipment, and we even got to invent brand new ways to make and do things! I was a part of a team of four people that revolutionized several ways of doing things and birthing new equipment from our brains to the shop floors to do it.</p>
+<p>
+  <a href="http://blogs.msdn.com/cfs-filesystemfile.ashx/__key/communityserver-blogs-components-weblogfiles/00-00-00-53-00-metablogapi/0753.image_5F00_24086BE4.png" target="_blank">allofoursecerets.com</a>
+</p>
