--- a/_projects/2013-11-08-redesigned-a-complex-e-commerce-site.html
+++ b/_projects/2013-11-08-redesigned-a-complex-e-commerce-site.html
@@ -4,21 +4,10 @@ title: Rebuilt A Complex E-Commerce Site
 date: 2013-11-08 01:14:53.000000000 -05:00
 categories: []
 tags: []
-status: publish
-type: project
-published: true
-meta:
-  _edit_last: '1'
-  pe_theme_Reversal: O:8:"stdClass":2:{s:7:"gallery";O:8:"stdClass":3:{s:2:"id";s:4:"1789";s:5:"width";s:0:"";s:6:"height";s:3:"333";}s:5:"video";O:8:"stdClass":1:{s:2:"id";s:4:"1783";}}
-  _thumbnail_id: '1846'
-author:
-  login: kevin
-  email: kevin.mcalear@gmail.com
-  display_name: kevin
-  first_name: ''
-  last_name: ''
-excerpt: !ruby/object:Hpricot::Doc
 ---
-<p>Service Spring Corporation has always been the innovator regarding technology in their industry. They built their old e-commerce website from scratch using modern web technology at the time. But, as technology goes, it was time for a complete infrastructure overhaul. So, I led a team to research & develop the best new site with the future in mind and we did just that! It was a great project to apply modern HTML5, CSS3, JavaScript, PHP, responsive design, CMS, UX, & other best practices to build a quality site that will grow into the future!<br />
-<br />
-[feature title="Service Spring's Website" icon="icon-heart"]<a href="http://www.servicespring.com/" target="_blank">servicespring.com</a>[/feature]</p>
+<p>
+  Service Spring Corporation has always been the innovator regarding technology in their industry. They built their old e-commerce website from scratch using modern web technology at the time. But, as technology goes, it was time for a complete infrastructure overhaul. So, I led a team to research & develop the best new site with the future in mind and we did just that! It was a great project to apply modern HTML5, CSS3, JavaScript, PHP, responsive design, CMS, UX, & other best practices to build a quality site that will grow into the future!
+  <br />
+  <br />
+  <a href="http://www.servicespring.com/" target="_blank">servicespring.com</a>
+</p>
