added in all project pics

--- a/_projects/2013-11-07-help-build-a-digital-education-product.html
+++ b/_projects/2013-11-07-help-build-a-digital-education-product.html
@@ -4,6 +4,7 @@ title: Help Build A Digital Education Product
 date: 2013-11-07 21:08:29.000000000 -05:00
 categories: []
 tags: []
+main_pic: ssc-solutions.png
 ---
 <p>
   I was tasked with researching and building out an idea to sell a unique digital educational/training product in the garage door industry called Solutions Education. Solutions Education is a series of training videos created by industry experts to educate professional garage door technicians and standardize your training process. It provides a platform for a company to take video-based courses we made, take a tests on them we administer digitally, and get certified on different skill sets. Everyone gets their own profile, and every company can administer their employee's information. This was a fun product to help create and to watch grow!
