--- a/_projects/2013-11-07-invented-new-equipment-proecesses.html
+++ b/_projects/2013-11-07-invented-new-equipment-proecesses.html
@@ -4,6 +4,7 @@ title: Invented New Equipment & Proecesses
 date: 2013-11-07 13:33:09.000000000 -05:00
 categories: []
 tags: []
+main_pic: ssc-r&d.jpg
 ---
 <p>
   I was on an amazing team (that I even got to lead for a season) that were the "think tank" for our entire organization. We got to do tons of R&amp;D, build prototypes, ask tough and crazy questions and then answer them, improve our process and equipment, and we even got to invent brand new ways to make and do things! I was a part of a team of four people that revolutionized several ways of doing things and birthing new equipment from our brains to the shop floors to do it.</p>
