--- a/_projects/2013-11-07-spoken-about-emerging-web-technology.html
+++ b/_projects/2013-11-07-spoken-about-emerging-web-technology.html
@@ -4,6 +4,7 @@ title: Spoke About Emerging Web Technology
 date: 2013-11-07 04:45:48.000000000 -05:00
 categories: []
 tags: []
+main_pic: bg-talk.png
 ---
 <p>
   I was asked to talk about what types of technology are becoming relevant and useful on the web. So I asked my brother, <a href="http://mattmcalear.net/" target="_blank">Matt McAlear</a>, to talk about some of the more technical aspects with me. We spoke to the VCT program at Bowling Green State University and made sure to give them plenty of awesome free resources to help them use what is already available on the web and gave them our vision of what the web may become!
