--- a/_projects/2013-11-08-created-an-inventory-analysis-tool.html
+++ b/_projects/2013-11-08-created-an-inventory-analysis-tool.html
@@ -4,6 +4,7 @@ title: Created An Inventory Analysis Tool
 date: 2013-11-08 00:55:39.000000000 -05:00
 categories: []
 tags: []
+main_pic: ssc-inventory.jpg
 ---
 <p>
   We seemed to be having a difficult time at Service Spring understanding inventory so I asked one simple question. Do we have too much inventory? I was able to created a simple, actionable answering tool with the latest techniques in data visualization and internal social networking. Between myself and our companies "data guru", we sat down with everyone who touches inventory in our organization, understood their role and the information they needed or insight on inventory they had, and rolled all of it up into a single web tool where, within seconds, any of them could play with different scenarios visually, come to their own conclusions about the inventory, and share it with the entire inventory group.
