--- a/_projects/2013-11-08-redesigned-solutions-iphone-app.html
+++ b/_projects/2013-11-08-redesigned-solutions-iphone-app.html
@@ -4,6 +4,7 @@ title: Redesigned Solutions iPhone App
 date: 2013-11-08 01:49:15.000000000 -05:00
 categories: []
 tags: []
+main_pic: ssc-ios.png
 ---
 <p>
   I built out a new user interface and user experience, updating the application to an iOS7 look and feel (incorporating flat design when appropriate for example). I worked with our internal iOS developer and provided him with extremely organized and customizable Photoshop files organized into easy-to-use groupings for individual items.
