--- a/_projects/2014-05-01-built-hashback.html
+++ b/_projects/2014-05-01-built-hashback.html
@@ -4,6 +4,7 @@ title: Built Hashback
 date: 2014-05-01 17:07:00.000000000 -04:00
 categories: []
 tags: []
+main_pic: hashback.png
 ---
 <p>
   Hashtags that give back. A few friends had an idea to build a platform where people can use hashtags to send encouragement to others. I build everything from the ground up! Technologies Used: Ruby, Rails, PostgreSQL, JavaScript, HTML, and Instagram's API.
