--- a/_projects/2014-05-01-created-tangent.html
+++ b/_projects/2014-05-01-created-tangent.html
@@ -4,6 +4,7 @@ title: Created Tangent
 date: 2014-05-01 17:48:22.000000000 -04:00
 categories: []
 tags: []
+main_pic: tangent.png
 ---
 <p>
   Tangent is a fun way to explore the web using word associations and different resources on the web. It was fun to build and use! Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, D3, JQuery, CSS, HTML, and 7 different APIs.
