--- a/_projects/2013-11-06-built-a-corporate-business-intelligence-dashboard.html
+++ b/_projects/2013-11-06-built-a-corporate-business-intelligence-dashboard.html
@@ -4,6 +4,7 @@ title: Built A Corporate Business Intelligence Dashboard
 date: 2013-11-06 19:24:04.000000000 -05:00
 categories: []
 tags: []
+main_pic: ssc-dashboard.png
 ---
 <p>
   Always wonder how healthy your company is? A team I lead and I developed a modern approach to automate, display, and explain a company's Key Performance Indicators to run an organization. We started with a question, "How do you measure success and failure in an area of business and ultimately in an entire organization?". We answered this by sitting down with each executive of an organization and asking them that question, looked at how data is captured, organized, stored, and maintained to answer that question, and then brainstormed on the best way to take the data and turn it into actionable, understandable information that could become useful in only a few seconds. After building data visualization upon data visualization and tweaking everything to their liking, we have a system that can help the right people make better decisions, ask better questions, and ultimately improve the organization in nearly every aspect.
