--- a/_projects/2013-11-06-built-a-machine-shops-website.html
+++ b/_projects/2013-11-06-built-a-machine-shops-website.html
@@ -4,6 +4,7 @@ title: Built A Machine Shop's Website
 date: 2013-11-06 06:01:37.000000000 -05:00
 categories: []
 tags: []
+main_pic: imm-web.png
 ---
 <p>
   Developed a spot for IMM to get their name into the market place, accurately representing who that are and what they can do, and created systems to automate a lot of their processes such as quoting new work.
