--- a/_projects/2013-11-06-built-an-internal-social-network-for-a-school.html
+++ b/_projects/2013-11-06-built-an-internal-social-network-for-a-school.html
@@ -4,6 +4,7 @@ title: Built An Internal Social Network For K-12 Schools
 date: 2013-11-06 14:43:42.000000000 -05:00
 categories: []
 tags: []
+main_pic: school-social-network.png
 ---
 <p>
   I was asked to help implement an internal social network so that teachers could share best practices, information about their students, brainstorm new education methods, and more! I gave training to all of the teachers and staff at Kateri Academy and Cardinal Stritch High School and helped them think of ways to take advantage of their new social network.
