--- a/_projects/2013-11-06-built-out-social-media-for-ssc.html
+++ b/_projects/2013-11-06-built-out-social-media-for-ssc.html
@@ -4,6 +4,7 @@ title: Built Out Social Media For SSC
 date: 2013-11-06 13:42:40.000000000 -05:00
 categories: []
 tags: []
+main_pic: ssc-socialmedia.jpg
 ---
 <p>
   I was given the authority to build out our social media efforts, from pretty much scratch. I got to put together a group of employees from the technology group and the marketing group and together we became industry leaders known for our social media efforts. Coordinating all messages on all major social media platforms (including YouTube), we have been able to get our company even more known and connected to our customers, win over new customers, show a lighter, more human side to Service Spring, and intentionally maintain our image in the industry as the technology leader.
