--- a/_projects/2013-11-07-implemented-version-control-from-svn-to-git-github.html
+++ b/_projects/2013-11-07-implemented-version-control-from-svn-to-git-github.html
@@ -4,6 +4,7 @@ title: Implemented Version Control From SVN to Git & GitHub
 date: 2013-11-07 07:40:51.000000000 -05:00
 categories: []
 tags: []
+main_pic: ssc-github.png
 ---
 <p>
   There is a saying, "If <em>(insert key person here)</em> were to get hit by a bus, how would everything run?" Heck, there is even something out there called <a href="http://en.wikipedia.org/wiki/Bus_factor" title="The Bus Factor" target="_blank">The Bus Factor</a>! Basically it gets at the core of making systems and organizations sustainable. The show must go on, as they say and for coding it isn't always easy to find the most up to date code, see previous versions, and be able to work on things with a group over years of development and various developers contributions. That is why we implemented Enterprise GitHub along with ever-evolving and improving standards.
