--- a/_projects/2013-11-08-built-a-corporate-project-management-system.html
+++ b/_projects/2013-11-08-built-a-corporate-project-management-system.html
@@ -4,6 +4,7 @@ title: Built A Corporate Project Management System
 date: 2013-11-08 01:23:59.000000000 -05:00
 categories: []
 tags: []
+main_pic: ssc-trello.png
 ---
 <p>
   I have been obsessed with project management for years. There never seems be be a great system to manage projects, only a sea of good ones. With that being said, I was given the authority to build out a great system for project management using Trello in various areas of our organization (starting with IT & Marketing) and scaling out further from there. I believe that project management should give you three things at their core, an at-a-glance understanding of what the project is, the resources it requires, and it's plan on getting it done. There are plenty of other things people need to know but it all comes from those three items. I also believe that it should take only seconds to use for anyone. The system Service Spring has now gives anyone involved those key items.
