--- a/_projects/2013-11-08-built-iron-embers-webstore.html
+++ b/_projects/2013-11-08-built-iron-embers-webstore.html
@@ -4,6 +4,7 @@ title: Built Iron & Ember's Webstore
 date: 2013-11-08 01:43:42.000000000 -05:00
 categories: []
 tags: []
+main_pic: iron-and-ember.png
 ---
 <p>
   I built out and designed the initial look, feel, and functionality of I&A's e-commerce site and CMS. This is a startup that wants to sell "provisions for gentlemen" which I think is a great idea so I did the project for free.
