--- a/_projects/2013-11-08-started-the-nerd-summit.html
+++ b/_projects/2013-11-08-started-the-nerd-summit.html
@@ -4,6 +4,7 @@ title: Started The Nerd Summit
 date: 2013-11-08 08:45:00.000000000 -05:00
 categories: []
 tags: []
+main_pic: nerd-summit.png
 ---
 <p>
   Co-Founded a group in Northwest Ohio that is designed to bring all nerds together to help each other and the community! It started as a couple of nerds getting together and has grown from there.
