--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@ permalink: /projects/
     {% for project in site.projects reversed %}
       <li class="project {{project.tags}}" data-sr="move 16px scale up 20%, over 2s">
         <a href="{{ project.url | prepend: site.baseurl }}">
-          <img src="http://placekitten.com/g/250/250">
+          <img src="/assets/pics/projects/{{ project.main_pic}}">
           <a class="project-link" href="{{ project.url | prepend: site.baseurl }}">
             <h2>{{ project.title }}</h2>
           </a>
