improved responsive project page

--- a/_projects/2013-11-07-implemented-version-control-from-svn-to-git-github.html
+++ b/_projects/2013-11-07-implemented-version-control-from-svn-to-git-github.html
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Implemented Version Control From SVN to Git & GitHub
+title: Version Control From SVN to Git & GitHub
 date: 2013-11-07 07:40:51.000000000 -05:00
 categories: []
 tags: []
