--- a/_projects/2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
+++ b/_projects/2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Won A NYC TechCrunch Disrupt Hackathon Award
+title: NYC TechCrunch Disrupt Hackathon Winner
 date: 2014-05-09 17:29:05.000000000 -04:00
 categories: []
 tags: []
