--- a/_projects/2013-11-06-built-a-corporate-business-intelligence-dashboard.html
+++ b/_projects/2013-11-06-built-a-corporate-business-intelligence-dashboard.html
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Built A Corporate Business Intelligence Dashboard
+title: Built A Corporate BI Dashboard
 date: 2013-11-06 19:24:04.000000000 -05:00
 categories: []
 tags: []
