--- a/_projects/2013-11-08-built-a-corporate-project-management-system.html
+++ b/_projects/2013-11-08-built-a-corporate-project-management-system.html
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Built A Corporate Project Management System
+title: Built A Project Management System
 date: 2013-11-08 01:23:59.000000000 -05:00
 categories: []
 tags: []
