--- a/_projects/2013-11-08-started-sscs-internship-program-for-designers-developers.html
+++ b/_projects/2013-11-08-started-sscs-internship-program-for-designers-developers.html
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Started SSC's Internship Program For Designers & Developers
+title: Built Designer & Developer Internship Program
 date: 2013-11-08 01:44:29.000000000 -05:00
 categories: []
 tags: []
