figuring out project view

--- a/_projects/2013-11-06-built-a-machine-shops-website.html
+++ b/_projects/2013-11-06-built-a-machine-shops-website.html
@@ -5,6 +5,7 @@ date: 2013-11-06 06:01:37.000000000 -05:00
 categories: []
 tags: []
 main_pic: imm-web.png
+file: 2013-11-06-built-a-machine-shops-website.html
 ---
 <p>
   Developed a spot for IMM to get their name into the market place, accurately representing who that are and what they can do, and created systems to automate a lot of their processes such as quoting new work.
