--- a/_projects/2013-11-06-created-a-musicians-logo-website.html
+++ b/_projects/2013-11-06-created-a-musicians-logo-website.html
@@ -5,6 +5,7 @@ date: 2013-11-06 05:44:46.000000000 -05:00
 categories: []
 tags: []
 main_pic: brian-music.png
+file: 2013-11-06-created-a-musicians-logo-website.html
 ---
 <p>
   I created a website, logo, design, and marketing plan for an extremely talented local musician who wants to make it big. With a professional look and feel tailored to his audience, he hopes to make it to the next level. Check him out as he progresses!
