--- a/_projects/2013-11-08-built-a-photographers-website.html
+++ b/_projects/2013-11-08-built-a-photographers-website.html
@@ -5,6 +5,7 @@ date: 2013-11-08 00:35:25.000000000 -05:00
 categories: []
 tags: []
 main_pic: brandt-photography.png
+file: 2013-11-08-built-a-photographers-website.html
 ---
 <p>
   I designed & built Brant's photography website to give him a place to share who he is, what he can do, and since I built it using WordPress, the ability to update and maintain it himself.
