--- a/_projects/2013-11-08-opened-service-spring-west.html
+++ b/_projects/2013-11-08-opened-service-spring-west.html
@@ -5,6 +5,7 @@ date: 2013-11-08 05:19:03.000000000 -05:00
 categories: []
 tags: []
 main_pic: ssc-cali.jpg
+file: 2013-11-08-opened-service-spring-west.html
 ---
 <p>
   At 22 years old I was responsible for the multi million dollar project of designing, building, opening, and running Service Spring's California manufacturing & distribution facility. I spent about a year and a half of my life living, breathing, and working on every aspect imaginable of this project until it was completed, under budget and on time with a happy crew. I learned so much about myself and business and that I can function of of barely any sleep!
