--- a/_projects/2013-11-08-started-sscs-internship-program-for-designers-developers.html
+++ b/_projects/2013-11-08-started-sscs-internship-program-for-designers-developers.html
@@ -5,6 +5,7 @@ date: 2013-11-08 01:44:29.000000000 -05:00
 categories: []
 tags: []
 main_pic: ssc-internships.png
+file: 2013-11-08-started-sscs-internship-program-for-designers-developers.html
 ---
 <p>
   Worked with Service Spring's Executive team, various colleges, and current employees that would work with the new interns to build the internship program!
