--- a/_projects/2013-11-08-started-visual-construction.html
+++ b/_projects/2013-11-08-started-visual-construction.html
@@ -5,6 +5,7 @@ date: 2013-11-08 08:44:23.000000000 -05:00
 categories: []
 tags: []
 main_pic: visual-construction.png
+file: 2013-11-08-started-visual-construction.html
 ---
 <p>
   I created a unique, scalable business model, branding, logo, website, production system, and everything else in between to create specific digital products and services. I pitched it To Service Spring Corporation and they have brought it into their business model. The entire idea, strategy, and system is something that Service Spring Corp. believes in and has continually built out.
