--- a/_projects/2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
+++ b/_projects/2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
@@ -5,6 +5,7 @@ date: 2014-05-09 17:29:05.000000000 -04:00
 categories: []
 tags: []
 main_pic: tech-crunch-hack.png
+file: 2014-05-09-won-a-nyc-techcrunch-disrupt-hackathon-award.html
 ---
 <p>
   Our Team built a data viz to show the relationships between startups and their investors. We won the CrunchBase award and and free tickets to TechCrunch Disrupt ($3k a ticket!) Technology Stack: Ruby, Rails, PostgreSQL, JavaScript, Esri Maps, JQuery, CSS, HTML, and the CrunchBase API.
