--- a/_projects/2013-10-29-helped-create-missionwork.html
+++ b/_projects/2013-10-29-helped-create-missionwork.html
@@ -5,6 +5,7 @@ date: 2013-10-29 20:38:12.000000000 -04:00
 categories: []
 tags: []
 main_pic: mission@work.png
+file: 2013-10-29-helped-create-missionwork.html
 ---
 <p>
   Mission At Work is a uniquely Service Spring answer to the problem of connecting people who want to volunteer and the organizations that desperately need these volunteers. We wanted to come up with a way to give back some of the blessings and use as many of our collective resources as possible. Mission@Work has given lots of time, money, resources, and love to several non-profits in the area and has help bond Service Spring Employees together through service.
