--- a/_projects/2013-11-05-started-various-bands-music-projects.html
+++ b/_projects/2013-11-05-started-various-bands-music-projects.html
@@ -5,6 +5,7 @@ date: 2013-11-05 19:10:46.000000000 -05:00
 categories: []
 tags: []
 main_pic: teolyn.png
+file: 2013-11-05-started-various-bands-music-projects.html
 ---
 <p>
   I was in several bands growing up and learned several different instruments and styles of composition. I wrote several different songs and was everything from promoter, apparel creator & designer, web guy, band manager, front man & lead singer, guitarist, keyboardist, and goofball. Styles included relaxing acoustic music, post-hardcore, rock/punk, alternative, and more recently, electronica & dubstep. One band I was in (Blind Ambition) was involved in a lawsuit at my high school and another (Teolyn) got offered a contract, recording deal, and national tour.
