--- a/_projects/2013-11-08-redesigned-a-complex-e-commerce-site.html
+++ b/_projects/2013-11-08-redesigned-a-complex-e-commerce-site.html
@@ -5,6 +5,7 @@ date: 2013-11-08 01:14:53.000000000 -05:00
 categories: []
 tags: []
 main_pic: ssc-website.png
+file: 2013-11-08-redesigned-a-complex-e-commerce-site.html
 ---
 <p>
   Service Spring Corporation has always been the innovator regarding technology in their industry. They built their old e-commerce website from scratch using modern web technology at the time. But, as technology goes, it was time for a complete infrastructure overhaul. So, I led a team to research & develop the best new site with the future in mind and we did just that! It was a great project to apply modern HTML5, CSS3, JavaScript, PHP, responsive design, CMS, UX, & other best practices to build a quality site that will grow into the future!
