--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@ permalink: /projects/
           <a class="project-link">
             <h2>{{ project.title }}</h2>
           </a>
-          <span class="project-meta">{{ project.date | date: "%b %-d, %Y" }}</span>
+          <!-- <span class="project-meta">{{ project.date | date: "%b %-d, %Y" }}</span> -->
         </a>
       </li>
     {% endfor %}
