--- a/thoughts.html
+++ b/thoughts.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: Thoughts
-permalink: /thoughts/
+<!-- layout: default -->
+<!-- title: Thoughts -->
+<!-- permalink: /thoughts/ -->
 ---
 
 <div class="home">
